Fix bugs. Make active area smaller and require shift + ctrl + dbl click

--- a/src/Explorer/Controls/FeaturePanel/FeaturePanelLauncher.less
+++ b/src/Explorer/Controls/FeaturePanel/FeaturePanelLauncher.less
@@ -9,3 +9,10 @@
   }
 }
 
+.activePatch {
+  position: absolute;
+    height: 20px;
+    width: 20px;
+    top: 20px;
+    left: -20px;
+}
